--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="crypto_currency">Currency</string>
+    <string name="exchange">Exchange</string>
+    <string name="global_metrics">Metrics</string>
+    <string name="tools">Tools</string>
+    <string name="partners">Partners</string>
 </resources>
