--- a/feature-currency/src/main/res/values/strings.xml
+++ b/feature-currency/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">screen-currency</string>
     <string name="buy">Buy</string>
+    <string name="go_to_purchase">go to purchase</string>
 </resources>
