make buy feature

--- a/core-ui/src/main/res/values/strings.xml
+++ b/core-ui/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="partners">Partners</string>
     <string name="coin_icon">coin icon</string>
     <string name="test"><font size="30">Hint here!</font></string>
+    <string name="retry">Retry</string>
 </resources>
