--- a/feature-purchase/src/main/res/values/strings.xml
+++ b/feature-purchase/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">feature-purchase</string>
     <string name="buy">Buy</string>
+    <string name="buy_coin">total coins bought %d</string>
 </resources>
